文件批量下载

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
             示例：TS=(stromatolite) AND PY=(2020)<br><br>
             提示：
             <br><br>
-            <table data-toggle="table">
+            <table class="table">
                 <tr>
                     <td>TS=主题</td>
                     <td>TI=标题</td>
