--- a/app/templates/down_page.html
+++ b/app/templates/down_page.html
@@ -1,11 +1,133 @@
 {% extends "base.html" %}
 {% block content %}
-    {% for paper in papers_dic_err_list %}
+    <br><br>
+    <div class="container" id="content" style="width: 80%;">
+        <div class="page-header">
+            <p style="text-align:center">
+            <h2>结果：</h2>
+            </p>
+        </div>
+        <ul class="nav nav-tabs">
+            <li role="presentation" class="active">
+                <button type="button" class="btn btn-success" id="but_succ">Success:{{ num_succ }}</button>
+            </li>
+            <li role="presentation">
+                <button type="button" class="btn btn-info" id="but_err">Problem:{{ num_err }}</button>
+            </li>
+            <li role="presentation" id="down_li">
+                <button type="button" class="btn btn-primary" id="down_all" onclick="down_all()">Download</button>
+            </li>
+        </ul>
+        <div id="succ_papers">
+            <table class="table table-bordered table-hover table-condense"
+                   data-toggle="table"
+                   data-classes="table table-hover"
+                   data-show-columns="true"
+                   data-striped="true"
+                   data-show-toggle="true"
+                   data-search="true"
+                   data-toolbar="#toolbar"
+                   data-height="900">
+                <thead>
+                <tr>
+                    <th data-field="file">File</th>
+                    <th data-field="title">Title</th>
+                    <th data-field="journal">Journal</th>
+                    <th data-field="doi">Doi</th>
+                    <th data-field="link">Link</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for paper in papers_dic_succ_list %}
+                    <tr>
+                        <td name="file_name">{{ paper['file_name'] }}</td>
+                        <td>{{ paper['title'] }}</td>
+                        <td class="text-lowercase">{{ paper['journal'] }}</td>
+                        <td>{{ paper['doi'] }}</td>
+                        <td>
+                            <a id="link" target="_blank" href="/download/{{ paper['file_name'] }}.pdf"><span>点击下载</span></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
 
-    {% endfor %}
+        </div>
 
+        <div id="err_papers">
+            <table class="table table-bordered table-hover table-condense"
+                   data-toggle="table"
+                   data-classes="table table-hover"
+                   data-show-columns="true"
+                   data-striped="true"
+                   data-show-toggle="true"
+                   data-search="true"
+                   data-toolbar="#toolbar"
+                   data-height="900">
+                <thead>
+                <tr>
+                    <th data-field="file">File</th>
+                    <th data-field="title">Title</th>
+                    <th data-field="journal">Journal</th>
+                    <th data-field="doi">Doi</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for paper in papers_dic_err_list %}
+                    <tr>
+                        <td>{{ paper['file_name'] }}</td>
+                        <td>{{ paper['title'] }}</td>
+                        <td class="text-lowercase">{{ paper['journal'] }}</td>
+                        <td>{{ paper['doi'] }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
 
-    {% for paper in papers_dic_succ_list %}
+        </div>
+    </div>
+{% endblock %}
 
-    {% endfor %}
+{% block scripts %}
+    <script>
+        $(document).ready(function () {
+            $('#err_papers').hide();
+            $('#down_li').show();
+        });
+        $('#but_succ').on('click', function (event) {
+            $('#succ_papers').show();
+            $('#err_papers').hide();
+            $('#down_li').show();
+        });
+        $('#but_err').on('click', function (event) {
+            $('#succ_papers').hide();
+            $('#err_papers').show();
+            $('#down_li').hide();
+        });
+
+        function down_all() {
+            var td_filenames = document.getElementsByName('file_name');
+            {#ids为文献的unique_id#}
+            var ids = []
+            for (var i = 0; i < td_filenames.length; i++) {
+                ids.push(td_filenames[i].innerText);
+            }
+            $.ajax({
+                url: '/downloadall',
+                type: 'POST',
+                dataType: 'json',
+                data: {
+                    'ids': ids
+                },
+                success: function (response) {
+                    console.log('success');
+                },
+                error: function (error) {
+                    console.log(error.status);
+                    console.log(error.responseText);
+                },
+                async: true
+            });
+        };
+    </script>
 {% endblock %}
