相关路径都从config中导入，提高移植性

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,7 @@
                     <script src="../static/js/bootstrap.min.js"></script>
                     <script src="../static/js/bootstrap-table.js"></script>
                     <script src="../static/js/bootstrap-table-fixed-columns.js"></script>
+                    <script src="../static/js/tableExport.min.js"></script>
             {%- endblock head %}
         </head>
         <body{% block body_attribs %}{% endblock body_attribs %}>
@@ -33,17 +34,17 @@
                     <div class="container">
                         <div class="navbar-header">
                             <a class="navbar-brand nav_a" href="/">
-                                Paper Downloader
+                                Center for Geoscience Knowledge Graph
                             </a>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav" id="nav_ul">
-                                <li style="background:#4285f4;"><a class="nav_a">文</a></li>
-                                <li style="background:#ea4335;"><a class="nav_a">献</a></li>
-                                <li style="background:#fbbd0b;"><a class="nav_a">下</a></li>
-                                <li style="background:#4285f4;"><a class="nav_a">载</a></li>
-                                <li style="background:#34a853;"><a class="nav_a">服</a></li>
-                                <li style="background:#ea4335;"><a class="nav_a">务</a></li>
+                                <li style="background:#4285f4;"><a class="nav_a" href="/">文</a></li>
+                                <li style="background:#ea4335;"><a class="nav_a" href="/">献</a></li>
+                                <li style="background:#fbbd0b;"><a class="nav_a" href="/">下</a></li>
+                                <li style="background:#4285f4;"><a class="nav_a" href="/">载</a></li>
+                                <li style="background:#34a853;"><a class="nav_a" href="/">服</a></li>
+                                <li style="background:#ea4335;"><a class="nav_a" href="/">务</a></li>
                             </ul>
                         </div>
                     </div>
