--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,6 +68,14 @@
         <div class="alert alert-danger" role="alert">{{ error_msg }}</div>
     {% endfor %}
 
+    <br><br>
+
+    <div class="footer" id="footer">
+        <div class="container">
+            <br>
+            <p>Powered by <a href="/" target="_blank">Center for Geoscience Knowledge Graph,CUG </a>
+        </div>
+    </div>
 
 {% endblock %}
 
