--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,6 +81,7 @@
 
 {% block scripts %}
     <script>
+    {#  等待提示弹窗  #}
         $('#submit').on('click', function (event) {
             $('#btn').click();
             $('#myModal').modal('show');
