--- a/app/templates/query_res.html
+++ b/app/templates/query_res.html
@@ -81,6 +81,7 @@
         });
 
         function checkboxed(objName) {
+            {#选择框 全选设定 #}
             var objNameList = document.getElementsByName(objName);
 
             if (null != objNameList) {
